# python-packaging-exercise

./: .gitignore  README.md
.github/workflows/: python-package1.yml  python-package2.yml
init/: README.md
init/package0/: my_module.py
init/package1/: __init__.py  my_module.py
init/package2/: .___init__.py  __init__.py
init/package2/subpackage1/: .___init__.py  __init__.py
init/package2/subpackage2/: .___init__.py  __init__.py
init/package2/subpackage2/subpackage3/: .___init__.py  __init__.py
poetry/: README.md
poetry/mypackageabc/: .coverage  LICENSE  pyproject.toml
poetry/mypackageabc/mypackageabc/: __init__.py  my_module.py
poetry/mypackageabc/tests/: test_my_array.py
setuptools_twine/: MANIFEST.in  README.md  setup.cfg
setuptools_twine/mypackageabc/: my_module.py
setuptools_twine/mypackageabc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
setuptools_twine/tests/: test_my_func.py
