[metadata]
name = mypackageabc
version = 0.99.0
description = My package description
long_description = My package is great!!!!!!
long_description_content_type = text/x-rst
author = Koki Tsuyuzaki
author_email = k.t.the-answer@hotmail.co.jp
url = https://github.com/biopackathon/python-packaging-exercise
keywords = keyword1, keyword2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = mypackageabc
python_requires = >=3.12
install_requires = numpy

[options.extras_require]
doc =
    sphinx
test = 
    pytest
    pytest-cov

[flake8]

[options.packages.find]
packages = mypackageabc